# Friend-Stream-Companion

./: .env.example  .replit  PERFORMANCE_BUDGET.md  ROADMAP.md  SELF_HOSTING.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md  screencrew.config.example.json
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  backend-switching.md  browser-webrtc-perf-limits.md  channel-permissions-and-bots.md  channels-scoping.md  chat-attachment-markers.md  chat-render-ws-echo-race.md  css-order-vs-aria-testing.md  dialect-safe-sql.md  drop-in-voice.md  notify-gate-ref.md  object-storage-attachments.md  orval-screencrew-quirks.md  overlay-new-message-detection.md  presence-leave-detection.md  preset-rooms.md  profile-public-vs-private.md  read-receipts-signaling.md  room-early-return-hooks.md  room-join-gating.md  room-membership-access-control.md  room-skin-theming.md  self-hosting-portability.md  server-runtime-config.md  ssrf-link-preview.md  tauri-desktop-shell.md  vite-new-dep-optimize-crash.md  voice-mute-deafen.md  webrtc-media-teardown.md  ws-access-control-eviction.md
.github/workflows/: blank.yml  desktop-release.yml
artifacts/api-server/: Dockerfile  build.mjs  package.json
artifacts/mockup-sandbox/: package.json  vite.config.ts
artifacts/screencrew/: index.html  package.json  (+1 more)
artifacts/screencrew-desktop/: README.md  desktop-release.github-workflow.yml  package-lock.json  package.json
artifacts/screencrew-desktop/src-tauri/: Cargo.toml  tauri.conf.json
artifacts/screencrew-desktop/src-tauri/src/: main.rs
(+83 files in other folders)
