[package]
name = "lynxdock-desktop"
version = "0.1.1"
description = "LynxDock desktop shell"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
